--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,8 @@ body {
   line-height: var(--lineHeight-5);
   overflow: hidden;
   height: 300vh;
+  transform: scale(0.9);
+  transform-origin: 0 0;
 }
 
 body.loaded {
