--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1601,7 +1601,7 @@ textarea.input-field {
 .footer-brand {
   position: relative;
   padding: 50px 40px;
-  background: var(--smoky-black-1) url("../images/footer-form-bg.png");
+  background: var(--black) url("../images/footer-form-bg.png");
   background-position: center top;
   background-repeat: repeat;
 }
@@ -1609,7 +1609,6 @@ textarea.input-field {
 .footer-brand::before,
 .footer-brand::after {
   top: 0;
-  width: 15px;
   height: 100%;
   background-image: url("../images/footer-form-pattern.svg");
 }
