--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,35 @@
   visibility: visible;
 }
 
+/* Newsletter form alignment fix */
+.footer .input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0;
+  position: relative;
+}
+
+.footer .input-wrapper .icon-wrapper {
+  flex: 1;
+  margin-block-end: 0;
+}
+
+.footer .input-wrapper .btn {
+  flex-shrink: 0;
+  margin-top: 0;
+  height: 56px;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 767px) {
+  .footer .input-wrapper {
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .footer .input-wrapper .btn {
+    width: 100%;
+    justify-content: center;
+  }
+}
