--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1585,7 +1585,7 @@
   \*-----------------------------------*/
   
   .footer-top {
-    margin-block-end: 70px;
+    /* margin-block-end: 70px; */
   }
   
   .footer-brand {
@@ -2256,13 +2256,14 @@
      */
   
     .footer .grid-list {
-      grid-template-columns: 0.45fr 1fr 0.45fr;
+      max-width: 200px;
       align-items: center;
     }
+
+
   
     .footer-brand {
-      grid-column: auto;
-      order: 1;
+      grid-column: 1;
       padding-block: 100px;
     }
   
